# Tejas7007-circuit-scaling

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  compute_svcca_alignment_fixed.py  create  environment.yml  pyproject.toml
data/: factual_recall_prompts.jsonl
notes/: hero_heads.md
paper/: draft.md  outline.md
scripts/: ablate_hero_heads_vs_random.py  align_heads_across_sizes.py  analyze_global_ioi_circuit_gpt2medium.py  analyze_gpt2medium_ioi_hero_heads.py  analyze_joint_ioi_anti_repeat.py  analyze_joint_ioi_anti_repeat_all.py  analyze_joint_ioi_anti_repeat_gpt2.py  analyze_joint_ioi_anti_repeat_sweep.py  analyze_pythia_baseline_transfer.py  analyze_tokenization_mismatch.py  anti_repeat_inversion_case_study.py  architecture_control_ioi_diff.py  attention_js_case_studies.py  bootstrap_frac_rank_pythia410m_to_gpt2medium.py  bootstrap_transfer_ci.py  case_study_head_analysis.py  causal_tracing_hero_heads.py  compare_ioi_vs_anti_repeat.py  compare_pythia_gpt2_case_studies.py  compute_cka_random_baseline.py  compute_head_cka_alignment.py  compute_induction_scores.py  compute_ioi_name_strengths_pythia_gpt2.py  compute_svcca_alignment.py  compute_svcca_alignment_fixed.py  divergence_taxonomy_expanded.py  divergence_taxonomy_generic.py  divergence_taxonomy_pythia410m_gpt2medium.py  export_hero_heads_for_paper.py  factual_recall_dataset.py  fig_style.py  functional_clustering_heads.py  gpt2medium_ioi_path_patching.py  inspect_head_attention.py  joint_ioi_anti_repeat_all.py  joint_ioi_anti_repeat_gpt2.py  learned_head_alignment.py  (+62 more)
(+33 files in other folders)
